Fix waveform clipping by time ruler: shrink canvas to leave room
- Canvas height is now calc(100% - 18px) to avoid drawing behind the
  time ruler overlay, which was hiding wave peaks at the bottom edge
- SW cache v38

--- a/soundlab/style.css
+++ b/soundlab/style.css
@@ -148,7 +148,7 @@ main {
 #waveform {
     display: block;
     width: 100%;
-    height: 100%;
+    height: calc(100% - 18px);
 }
 .waveform-empty {
     position: absolute;
